examples/test/testpolicy6608.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6608
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key20: value46
      key25: value9
      key46: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value16
      podSelector:
        matchLabels:
          key15: value41
